--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="icon" href="img/common/favicon.png" type="image/png" sizes="16x16" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/style_m.css" />
+        <link rel="stylesheet" type="text/css" href="css/index_m.css" />
 
         <script src="js/common.js" defer></script>
         <script src="js/index.js" defer></script>
@@ -24,7 +26,7 @@
     </head>
     <body>
         <!-- Header -->
-        <hedaer id="header"></hedaer>
+        <!-- <hedaer id="header"></hedaer> -->
         <main>
             <!-- Main -->    
             <div class="main_sld">
