모바일 버전 대폭 수정

--- a/common/header.html
+++ b/common/header.html
@@ -3,50 +3,55 @@
         <a href="../index.html">
             <img src="../img/common/logo.png" title="" />
         </a>
-        <ul>
-            <li>
-                <a href="../page/about_us.html" data-i18n="header.menu.0.title"></a>
-                <ul class="hover_menu">
-                    <li>
-                        <a href="../page/about_us.html#ceo-message" data-i18n="header.menu.0.sub_menu.0.title"></a>
-                    </li>
-                    <li>
-                        <a href="../page/about_us.html#company-overview" data-i18n="header.menu.0.sub_menu.1.title"></a>
-                    </li>
-                    <li>
-                        <a href="../page/about_us.html#history" data-i18n="header.menu.0.sub_menu.2.title"></a>
-                    </li>
-                    <li>
-                        <a href="../page/about_us.html#clients" data-i18n="header.menu.0.sub_menu.3.title"></a>
-                    </li>
-                    <li>
-                        <a href="../page/about_us.html#patents" data-i18n="header.menu.0.sub_menu.4.title"></a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="../page/product.html" data-i18n="header.menu.1.title"></a>
-            </li>
-            <li>
-                <a href="../page/introduction.html" data-i18n="header.menu.2.title"></a>
-                <ul class="hover_menu">
-                    <li>
-                        <a href="../page/introduction.html" data-i18n="header.menu.2.sub_menu.0.title"></a>
-                        <a href="../page/announcement.html" data-i18n="header.menu.2.sub_menu.1.title"></a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="../page/contact.html" data-i18n="header.menu.3.title"></a>
-            </li>
-        </ul>
-        <ul>
-            <li class="nav-item language-switcher">
-                <button class="lang-btn active" data-language="ko">KR</button>
-                <span class="lang-separator">/</span> 
-                <button class="lang-btn" data-language="en">EN</button>
-            </li>
-        </ul>
+
+        <nav class="gnb">
+            <ul>
+                <li>
+                    <a href="../page/about_us.html" data-i18n="header.menu.0.title"></a>
+                    <ul class="hover_menu">
+                        <li>
+                            <a href="../page/about_us.html#ceo-message" data-i18n="header.menu.0.sub_menu.0.title"></a>
+                        </li>
+                        <li>
+                            <a href="../page/about_us.html#company-overview" data-i18n="header.menu.0.sub_menu.1.title"></a>
+                        </li>
+                        <li>
+                            <a href="../page/about_us.html#history" data-i18n="header.menu.0.sub_menu.2.title"></a>
+                        </li>
+                        <li>
+                            <a href="../page/about_us.html#clients" data-i18n="header.menu.0.sub_menu.3.title"></a>
+                        </li>
+                        <li>
+                            <a href="../page/about_us.html#patents" data-i18n="header.menu.0.sub_menu.4.title"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="../page/product.html" data-i18n="header.menu.1.title"></a>
+                </li>
+                <li>
+                    <a href="../page/introduction.html" data-i18n="header.menu.2.title"></a>
+                    <ul class="hover_menu">
+                        <li>
+                            <a href="../page/introduction.html" data-i18n="header.menu.2.sub_menu.0.title"></a>
+                            <a href="../page/announcement.html" data-i18n="header.menu.2.sub_menu.1.title"></a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="../page/contact.html" data-i18n="header.menu.3.title"></a>
+                </li>
+            </ul>
+        </nav>
+        <nav>
+            <ul class="lang-btn-box">
+                <li class="nav-item language-switcher">
+                    <button class="lang-btn active" data-language="ko">KR</button>
+                    <span class="lang-separator">/</span> 
+                    <button class="lang-btn" data-language="en">EN</button>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
     
